PUT records updates match keys as well MODSI-26 (#13)
New matchkey config: "update".
New service: DELETE /shared-index/records?query..
Breaking change to database structure.
Changes to module descriptor as well.
Remove some openapi/parameters from mod-eusage-reports added by mistake.
